[tool.poetry]
name = "repl_pygame_ch-10-lab-nbell526-3"
version = "0.1.0"
description = ""
authors = ["Nicholas-RR <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
